# lattice_definition

./: .env.example  .gitignore  CLAUDE.md  Info_Dialog_ui.py  Ion_Dialog_ui.py  Main_Window_ui.py  _TEST_ARTYOMA_ASS.py  _prepare_avatars.py  _seed_substance.py  _validate_ml.py  cris_example.py  cris_load_test.jmx  cris_report.py  cris_test_xyz.py  generate_report.py  main.py  pyproject.toml  railway.toml  readme.md  requirements.txt  research_diary.md  resources_rc.py  start.sh  test_report.html  test_runner.py
ML/: UUC_V2.ipynb  Untitled0.ipynb  VERSIA2_working.ipynb  kde_classifier.pkl  percentage_ident.py  rf_optimized_model.pkl  train_v2_colab.ipynb
RESEARCH/: 50_patents_crystal_structure_recognition.xlsx  50_sources_crystal_recognition.xlsx  70_sources_analysis.md  Project_Information.md  Research_50_sources.md  dictionary.md  dop.md  research_diary.md  Подготовка к постеру.docx
backend/: api.py
clustering/: init_cluster_umap.py
cris/: __init__.py  logger.py
database/: config.py  db.py  migrate.py  models.py
db/: complete_db.py  coordinates_nondimensionalization.py  data_to_db.py  db_init.py  db_init.sql  get_vectors_from_xyz.py  init.sql  ions_query.py  json_file_to_db.py  json_to_db.py  lattice_types_init.py  lattice_types_init.sql  normalize.py  normalize_vectors.py  xyz_to_db.py
docs/: db_schema.html  ui_mockup.html
frontend/: README.md  colors_and_type.css  index.html  styles.css
grid generation/: macrocubic NaCl.py
operations/: lattice_microoperations.py
scripts/: config.py  coordinates_nondimensionalization.py  generate_dataset.py  (+4 more)
(+9209 files in other folders)
